# lucasrcezimbra.github.io

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  README.md  config.toml  custom.min.2ef373c2c125094d9302d8a924eba231d053340611b63bcf581460745cef626f.css  custom.min.e872a689a522142bec4b49db6ac43403a5c38978878998baf6db6298568efdec.css  index.html  index.xml  jquery-3.6.1.min.min.8985a8985a8bab0c06c0f4036f1a7dcb928dc0822c1d50517a1c6538f25c87db.js  jquery.dataTables.min.min.16697a3bc9cb9058c116bec9c264c212029776d1292883bfbb44570a207e15a2.js  jquery.dataTables.min.min.3b0b9d00b1890ba1fb1472480998b073ad910d4c2a73f5d48fda7c43c21c0b75.css  jquery.dataTables.min.min.4efab8f579146279cc7686d017dfbcbb9240c2093b92215e59c5c072f74d46b6.css  jquery.dataTables.min.min.81d3bc71314508a0b97e678aad65ff0b3312dcac9a1a7332273aba32a4802ae4.js  jquery.dataTables.min.min.8f6eae843117db9532d2c9b910f3b28834d22d85107ce9aba8b5abbeab67400a.css  jquery.dataTables.min.min.91ecb48a0f76a338b289bdd8fbdb28c71ef115955c3c0bef49a142fa6cab11ec.js  jquery.dataTables.min.min.c7bd0e0f153e4cc33422c7043831da4064e5b15c0a556fae86f6251216e92720.js  mise.toml  project.min.cc15fca9f603b853c828be903488d99afe86c71e40721cc4927e27f7453a4a36.css  pyproject.toml  sitemap.xml  timeline.min.801628785543d9e7f6deb109e9561a48da7823522c0986a7dd47be117447e62f.css  vis-timeline-graph2d.min.min.15aad78c7961c518a27d54923d04eea2b750b66ebea8f490d9fe599da0ae8928.css  vis-timeline-graph2d.min.min.2c24769c605622091a0ff8dd8d7a56356f2faf7dc0dbf37b3d1050b97e086e33.js  (+6 more)
.well-known/: nostr.json
anotacoes/: index.html  (+1 more)
(+806 files in other folders)
